Avoid width problem
Windows/FF5 had the .person divs slightly too wide for .people to contain.
Letting .people fill the width and simply centering ther .persons should avoid
the problem.

--- a/public/application.css
+++ b/public/application.css
@@ -107,8 +107,7 @@ input,
 }
 
 .people {
-  margin: 0px auto;
-  width: 685px;
+  text-align: center;
 }
 
 .person {
@@ -135,6 +134,9 @@ input,
 .person.kripet {
   text-align: right;
   border-right: 1px solid #3AD;
+}
+.person.steve_rit {
+  text-align: left;
 }
 .tweet_link {
   display: block;
